# WAFL25-RobustFL

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_experiments.sh
configs/: config_data_attack.yaml  config_model_attack.yaml  config_no_attack.yaml
scripts/: partition_dataset.py  run_simulation.py
src/: attacks.py  client_app.py  flowerClient.py  models.py  server_app.py  settings.py  task.py
src/strategies/: bulyan_strategy.py  krum_strategy.py  loss_based_clustering.py  mean_strategy.py  median_strategy.py  trimmed_mean_strategy.py
